[package]
name = "git-flow"
version = "0.1.0"
authors = ["matsumoto <r-matsumoto@zyyx.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
config = "0.9"
dirs = "2.0"
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"