[package]
name = "infrastructure"
version = "0.1.0"
authors = ["matsumoto <r-matsumoto@zyyx.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
domain = { path = "../domain" }

reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }